--- a/public/components/items/itemEditor.html
+++ b/public/components/items/itemEditor.html
@@ -1,10 +1,10 @@
 <div class="relative z-50 w-auto h-auto">
-  <template x-if="$store.globStore.getCurrentTab()" x-teleport="body">
+  <template x-if="$store.clients.selectedClient.length > 1" x-teleport="body">
     <div x-show="slideOverOpen" @keydown.window.escape="slideOverOpen=false" class="relative z-[60]">
       <div
+        id="slide-over-unknown"
         x-show="slideOverOpen"
         x-transition.opacity.duration.600ms
-        @click="slideOverOpen = false"
         class="fixed inset-0 bg-black bg-opacity-10"></div>
       <div class="fixed inset-0 overflow-hidden">
         <div class="absolute inset-0 overflow-hidden">
