--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -663,6 +663,10 @@ video {
   z-index: 50;
 }
 
+.z-\[100\] {
+  z-index: 100;
+}
+
 .z-\[60\] {
   z-index: 60;
 }
@@ -1277,6 +1281,18 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .place-self-center {
@@ -3308,7 +3324,7 @@ input::-webkit-inner-spin-button {
 .dark .modal-btn-prim {
   border-radius: 0.375rem;
   border-width: 1px;
-  border-color: transparent;
+  border-style: none;
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
   padding-left: 0.5rem;
@@ -3318,25 +3334,23 @@ input::-webkit-inner-spin-button {
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
-  color: rgb(232 233 235 / var(--tw-text-opacity, 1));
+  color: rgb(212 212 212 / var(--tw-text-opacity, 1));
   transition-duration: 500ms;
 }
 
 .dark .modal-btn-prim:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
-  background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
-  color: rgb(254 160 154 / var(--tw-text-opacity, 1));
+  color: rgb(254 127 118 / var(--tw-text-opacity, 1));
 }
 
 .dark .modal-btn-prim:active {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  --tw-border-opacity: 1;
-  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
 .modal-btn-sec {
