totals - add, removeX3 calcTotal - do disc dep note

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,13 +331,13 @@ input::-webkit-inner-spin-button {
   @apply flex justify-center p-2 transition duration-300 border border-vls2 text-vls2 dark:border-vds dark:text-vds;
 }
 .modal-btn-prim {
-  @apply px-2 py-1 text-base duration-500 border rounded-md bg-vls2 text-vlp2;
+  @apply px-2 py-1 text-sm duration-500 border border-vlp/10 rounded-md bg-vls2 text-vlp2;
   @apply hover:border-vla hover:bg-vls3 hover:text-vla;
   @apply active:scale-95 active:border-vla;
 }
 .dark .modal-btn-prim {
-  @apply px-2 py-1 text-base duration-500 border border-none rounded-md bg-vds3neu700 text-vds;
-  @apply hover:border-vda2 hover:bg-vdp2 hover:text-vda2;
+  @apply px-2 py-1 text-sm duration-500 border border-vds2 rounded-md bg-vdp2 text-vds;
+  @apply hover:border-vda2 hover:bg-vdp hover:text-vda2;
   @apply active:scale-95;
 }
 .modal-btn-sec {
