Deposit and discount should work. Not properly tested. Neet note and add pdf

--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -647,6 +647,10 @@ video {
   top: 25%;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -1484,10 +1488,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.border-vlp\/20 {
-  border-color: rgb(255 255 255 / 0.2);
-}
-
 .border-vls\/40 {
   border-color: rgb(139 145 151 / 0.4);
 }
@@ -1560,16 +1560,6 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
 }
 
 .bg-red-800 {
@@ -1802,6 +1792,10 @@ video {
 
 .pr-4 {
   padding-right: 1rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .text-left {
@@ -3891,16 +3885,6 @@ input[type='radio']:checked {
 .hover\:bg-green-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-green-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-red-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-red-900:hover {
