--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -1756,6 +1756,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .\!py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -2038,6 +2042,10 @@ video {
 .text-vls2 {
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
+}
+
+.text-vls2\/40 {
+  color: rgb(43 52 64 / 0.4);
 }
 
 .text-vls2\/60 {
@@ -2469,7 +2477,7 @@ input::-webkit-inner-spin-button {
   border-radius: 0.25rem;
   border-width: 1px;
   --tw-bg-opacity: 1;
-  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
@@ -3051,7 +3059,7 @@ input::-webkit-inner-spin-button {
   width: 100% !important;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -3961,6 +3969,11 @@ input[type='radio']:checked {
   border-color: rgb(139 145 151 / 0.8);
 }
 
+.hover\:border-vls2:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
+}
+
 .hover\:border-vred-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -4024,11 +4037,6 @@ input[type='radio']:checked {
 .hover\:bg-vlp2:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-vls3:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
@@ -4244,6 +4252,10 @@ input[type='radio']:checked {
   border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-vlp\/40:is(.dark *) {
+  border-color: rgb(255 255 255 / 0.4);
+}
+
 .dark\:border-vls\/40:is(.dark *) {
   border-color: rgb(139 145 151 / 0.4);
 }
@@ -4352,6 +4364,10 @@ input[type='radio']:checked {
   color: rgb(163 163 163 / var(--tw-text-opacity, 1));
 }
 
+.dark\:text-vlp\/40:is(.dark *) {
+  color: rgb(255 255 255 / 0.4);
+}
+
 .dark\:text-vls:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(139 145 151 / var(--tw-text-opacity, 1));
@@ -4407,6 +4423,11 @@ input[type='radio']:checked {
 .dark\:hover\:\!border-vds:hover:is(.dark *) {
   --tw-border-opacity: 1 !important;
   border-color: rgb(212 212 212 / var(--tw-border-opacity, 1)) !important;
+}
+
+.dark\:hover\:border-vds:hover:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
 }
 
 .dark\:hover\:border-vls\/80:hover:is(.dark *) {
